# Afters

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railpack.json
afters-dashboard/: Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
afters-dashboard/app/: layout.tsx  (+2 more)
afters-messaging/: Dockerfile  nixpacks.toml  package.json  railway.json  tsconfig.json
afters-orchestrator/: feedback_training.jsonl  nixpacks.toml  pyproject.toml  requirements.txt
afters-orchestrator/afters/: __init__.py  config.py  main.py  models.py
afters-orchestrator/afters/agents/: __init__.py  closure_agent.py  debrief_intake.py  group_batcher.py  scheduler.py  scoring_agent.py  venue_agent.py
afters-orchestrator/afters/api/: __init__.py  admin.py  closure.py  messages.py  metrics.py  scenarios.py  sessions.py  traces.py  users.py
afters-orchestrator/afters/db/: __init__.py  mongo.py  redis_client.py
afters-orchestrator/afters/graph/: __init__.py  machine.py  state.py
afters-orchestrator/afters/llm/: __init__.py  client.py  mock.py  tracing.py
afters-orchestrator/afters/messaging/: __init__.py  client.py  text.py
afters-orchestrator/afters/services/: __init__.py  backfill.py  closure_service.py  scenarios.py  session_service.py
afters-orchestrator/afters/whisper/: __init__.py  stub.py
afters-orchestrator/evals/: dataset.py  run_evals.py
afters-orchestrator/scripts/: codegen_pydantic.py  run_scenario.py  seed.py
afters-shared/: package.json  tsconfig.json
(+42 files in other folders)
